testsuite/tests/indexed-types/should_fail/T16110_Fail3.stderr
T16110_Fail3.hs:11:3: error: [GHC-41522]
    • Illegal argument ‘Int’ in:
        ‘type T a Int = ...’
        The arguments to ‘T’ must all be distinct type variables.
    • In the default associated type family instance declaration for ‘T’
      In the class declaration for ‘C’

